--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="icon" onclick="lightning()"><p class="emoj">⚡️</p></div>
             <div class="icon" id="horseicon" onclick="horse()"><p class="emoj">🐴</p></div>
             <div class="icon" id="flowericon" onclick="flower()" ><p class="emoj">🌸</p></div>
-            <div class="icon"><p class="emoj">🔬</p></div>
+            <div class="icon"><p class="emoj" onclick="location.href='https://erinwangyy.github.io/readingresponse/./';"  >🔬 </p></div>
             <!-- <div class="time2">
             <div class="rope"><img src="pictures/rope.png" alt="" class="line2"></div>
             <div class="timecard"><p>This is a Website about TIME</p></div>
