--- a/index.html
+++ b/index.html
@@ -43,8 +43,13 @@
     <div class="div2" id="display">
         <div class="dotcontainer"><div class="grid" onmouseover="dotPosition()"></div></div>
         <div class="iconcontainer">
-            <div class="empty">THIS WEBSITE IS ABOUT TIME.</div>
-           
+            <div></div>
+           <div onclick="sandclick()" class="tooltip">1<span class="tooltiptext">I can do more</span></div>
+           <div class="tooltip" onclick="lightning()">2<span class="tooltiptext">I can do more</span></div>
+           <div class="number" id="number3" onclick="number3()">3</div>
+           <div class="number" onclick="flower()">4</div>
+           <div class="number" onclick="location.href='https://erinwangyy.github.io/readingresponse/./';" >5</div>
+           <div class="empty">THIS WEBSITE IS ABOUT TIME.</div>
             <div class="icon" onclick="sandclick()"><p class="emoj">⏳</p></div>
             <div class="icon" onclick="lightning()"><p class="emoj">⚡️</p></div>
             <div class="icon" id="horseicon" onclick="horse()"><p class="emoj">🐴</p></div>
@@ -74,6 +79,7 @@
 
                    
         <!-- <div class="poem"  id="poem2" ></div> -->
+        <div class="profile"><img src="pictures/profile.png" alt="" class="profileimg"></div>
         <div id="dian"> <img src="pictures/dian.png" class="dian"></div>
         <div id="dian2"> <img src="pictures/dian2.png" class="dian2"></div>
         <div id="dian3"> <img src="pictures/dian3.png" class="dian3"></div>
